# flowers-102-classification

./: .gitignore  Dockerfile  INFO.MD  INFO.md  README.md  docker-compose.yaml
notebooks/: data.ipynb
services/backend/: .gitignore  Dockerfile.fastapi  Makefile  pyproject.toml  requirements.txt
services/backend/model/: model.pt  transform.pt
services/backend/src/: callbacks.py  data.py  gradio_app.py  main.py  model.py  train.py  transforms.py  utils.py
services/backend/src/.ipynb_checkpoints/: data-checkpoint.py
services/backend/src/architectures/: __init__.py  base.py  deep_cnn.py  resnet.py  squeeze_net.py
services/frontend/: package-lock.json
services/frontend/src/: App.js
